--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <title>Powerfull Point</title>
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
+  <script src="../bower_components/jquery/jquery.js"></script>
+  <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
   <script src="../bower_components/angular-resource/angular-resource.js"></script>
@@ -15,43 +17,104 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
+  <!-- Begin Navbar -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Powerful Point</a>
+      </div>
 
-  <div class="row search" ng-controller="PhoneListCtrl">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Start</a></li>
+          <li><a href="#">About</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+    
+        <button class="btn btn-primary btn-sm navbar-right login" data-toggle="modal" data-target="#myModal">Sign in</button>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  <!-- End Navbar -->
 
-    <div class="col-md-2">
-      <input ng-model="query" placeholder="Search here">
-    </div>
+  <!-- Begin Search Panel -->
+  <div class="panel panel-default" ng-controller="PhoneListCtrl">
+    <div class="panel-heading">Panel heading</div>
+      <div class="panel-body">
+        <p>
+          Welcome to Powerful Point! You can start learning about presentations by searching for a topic. Enter your query in the box below. Alternatively, use the table of contents on the left side of the page to navigate the content. Happy learning!
+        </p>
+        <input ng-model="query" placeholder="Search here">
+      </div>
 
-    <div class="col-md-10">
-      <ul class="phones">
-        <li ng-repeat="phone in phones | emptyifblank:query | filter:query | orderBy:orderProp" class="thumbnail">
-          <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
-          <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-          <p>{{phone.snippet}}</p>
-        </li>
-      </ul>
-    </div>
+    <ul class="phones list-group">
+      <li ng-repeat="phone in phones | emptyifblank:query | filter:query | orderBy:orderProp" class="list-item">
+        <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
+        <p>{{phone.snippet}}</p>
+      </li>
+    </ul>
+  </div>
+  <!-- End Search Panel -->
 
-  </div> 
-
+  <!-- Begin Table of Contents and Main Content Area -->
   <div class="row">
 
+    <!-- Begin Table of Contents -->
     <div class="col-md-2" ng-controller="PhoneListCtrl">
-      <!--Sidebar content-->
-
       <ul>
         <li ng-repeat="phone in phones | orderBy:OrderProp"><a href="#/phones/{{phone.id}}">{{phone.name}}</a></li>
       </ul>
-
     </div>
+    <!-- End Table of Contents -->
 
+    <!-- Begin Main Content Area with Angular Tempate -->
     <div class="col-md-10">
       <div ng-view></div>
     </div>
+    <!-- End Main Content Area -->
 
   </div>
+  <!-- End Table of Contents and Main Area Row -->
 
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
 
 </body>
