--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,14 @@
   </div>
   <!-- End Table of Contents and Main Area Row -->
 
+  <!-- Footer -->
+  <hr>
+
+  <footer>
+    <p>&copy; Sekwoia 2014</p>
+  </footer>
+  <!-- End Footer -->
+
 </div>
 
 <!-- Modal -->
