Linked the data from chapters.json to the controller and custom service to display data in the table of contents section. Edited the code in the index.html file to include the new data for the table of contents.

--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
     <!-- Begin Table of Contents -->
     <div class="col-md-2" ng-controller="PhoneListCtrl">
       <ul>
-        <li ng-repeat="phone in phones | orderBy:OrderProp"><a href="#/phones/{{phone.id}}">{{phone.name}}</a></li>
+        <li ng-repeat="chapter in chapters | orderBy:OrderProp"><a href="#/phones/{{chapter.id}}">{{chapter.title}}</a></li>
       </ul>
     </div>
     <!-- End Table of Contents -->
